--- a/JooleJoole/JooleJoole/JooleJoole.csproj
+++ b/JooleJoole/JooleJoole/JooleJoole.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\dbConnection.cs" />
+    <Compile Include="Models\quven.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
